--- a/ODK.Website.Angular/src/index.html
+++ b/ODK.Website.Angular/src/index.html
@@ -5,7 +5,7 @@
   <title></title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/assets/favicon32.png">
+  <link rel="icon" type="image/x-icon" href="/assets/favicon32.png?v=3">
 </head>
 <body>
   <app-root></app-root>
